--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jarn": "^0.0.1",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10",
