--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
-    "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
