--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "firebase": "^10.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.5.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
